--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="logo">
         <img src="https://cdn-icons-png.flaticon.com/512/8830/8830780.png" alt="Company Logo" />
-        <h1>Adaps</h1>
+        <h1>Adaps 2</h1>
       </div>
       <h2>Internal Attendance System</h2>
     </header>
